--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@prisma/client": "^4.11.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+
+    "mongodb": "^4.14.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "lodash": "^4.17.21",
-    "next": "13.2.4",
+    "next": "13.1.6",
     "next-auth": "^4.19.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
