--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-
+    "@heroicons/react": "^2.0.16",
     "mongodb": "^4.14.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
